<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_b"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/login_tv"
        style="@style/login_text_style"
        android:text="@string/login" />

    <RelativeLayout
        android:id="@+id/main_device_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_tv"
        android:layout_marginTop="10dp"
        android:gravity="center" >


        <EditText
            android:id="@+id/devic_et"
            style="@style/edit_text_style"
            android:hint="@string/devic_name"
            android:imeOptions="actionNext" />

        <ImageButton
            android:id="@+id/clear_device_et"
            style="@style/login_clear_imgbtn_style"
            android:contentDescription="@string/clear_btn"
             />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_user_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_device_layout"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/user_et"
            style="@style/edit_text_style"
            android:hint="@string/user_name"
            android:imeOptions="actionNext" />

        <ImageButton
            android:id="@+id/clear_user_et"
            style="@style/login_clear_imgbtn_style"
            android:contentDescription="@string/clear_btn"
             />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_passwd_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_user_layout"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/passwd_et"
            style="@style/edit_text_style"
            android:hint="@string/passwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/clear_passwd_et"
            style="@style/login_clear_imgbtn_style"
            android:contentDescription="@string/clear_btn"
             />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_passwd_layout"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/login_btn"
            style="@style/text_style"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/login_btn_draw"
            android:text="@string/login" />

        <Button
            android:id="@+id/cancel_btn"
            style="@style/text_style"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/login_btn_draw"
            android:text="@string/cancel"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/result_tv"
        style="@style/text_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_btn_layout"
        android:gravity="center"
        android:text="@string/logining"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_tv"
        android:visibility="gone" />

</RelativeLayout>